# anantayu-manas

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3f2c8d91e47_add_demographics_to_assessments.py  beabfff9ced4_initial_tables.py  c5e8f1a23b90_add_purchases_and_subtype_fields.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: assessments.py  auth.py  payments.py  questions.py  results.py  router.py
backend/app/core/: exceptions.py  security.py
backend/app/data/: prakriti_types.json  svabhava_profiles.json
backend/app/models/: __init__.py  assessment.py  purchase.py  question.py  result.py  user.py
backend/app/schemas/: assessment.py  result.py  user.py
backend/app/services/: ai_insights.py  auth_service.py  payment_service.py  pdf_generator.py  prakriti_classifier.py  scoring_engine.py
backend/scripts/: seed_questions.py
backend/tests/: conftest.py  test_prakriti_classifier.py  test_scoring_engine.py
designs/: DESIGN_SYSTEM.md
designs/desktop/: 01-landing-page.html  02-assessment-intro.html  03-question-screen.html  04-section-transition.html  05-processing-result.html  06-result-profile-card.html  07-detailed-report.html  08-deep-assessment-unlock.html  09-deep-assessment-quiz.html  10-subtype-report.html  11-login.html  12-signup.html  (+1 more)
docs/: ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION.md  LOGIC_DOCUMENT.md  PRD.md  QUIZ_LOGIC.md
frontend/: index.html  package-lock.json  package.json
(+84 files in other folders)
