[project]
name = "manas-backend"
version = "0.1.0"
description = "Manas - Ayurvedic Prakriti Assessment Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
    "razorpay>=1.4.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
